heroku and static file organization

--- a/public/2ndpage.html
+++ b/public/2ndpage.html
@@ -1,26 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="secondarystyles.css">
+    <link rel="stylesheet" href="./stylesheets/secondarystyles.css">
     <title>PicturFolio2</title>
 </head>
+
 <body>
-   <h1>Picturfolio</h1>
+    <h1>Picturfolio</h1>
     <div class="container">
-        <div class="box"><p>Nature</p></div>
-        <div class="box"><p>Digital</p></div>
-        <div class="box"><p>People</p></div>
-        <div class="box"><p>Hand</p></div>
+        <div class="box">
+            <p>Nature</p>
+        </div>
+        <div class="box">
+            <p>Digital</p>
+        </div>
+        <div class="box">
+            <p>People</p>
+        </div>
+        <div class="box">
+            <p>Hand</p>
+        </div>
     </div>
     <div class="link">
         <a href="3rdpage.html" class="button">Add to our Gallery</a>
     </div>
-    
-    
+
+
 </body>
+
 </html>
 
 
