front end additions and fixes

--- a/public/galleryMain.html
+++ b/public/galleryMain.html
@@ -6,27 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./stylesheets/secondarystyles.css">
-    <title>PicturFolio2</title>
+    <title>PicturFolio</title>
 </head>
 
 <body>
-    <h1>Picturfolio</h1>
+    <a id="logo" href="index.html">Picturfolio</a>
     <div class="container">
         <div class="box">
-            <p>Nature</p>
+            <a class="subGallery" href="natureGallery.html">Nature</a>
         </div>
         <div class="box">
-            <p>Digital</p>
+            <a class="subGallery" href="digitalGallery.html">Digital</a>
         </div>
         <div class="box">
-            <p>People</p>
+            <a class="subGallery" href="peopleGallery.html">People</a>
         </div>
         <div class="box">
-            <p>Hand</p>
+            <a class="subGallery" href="handGallery.html">Hand</a>
         </div>
     </div>
     <div class="link">
-        <a href="3rdpage.html" class="button">Add to our Gallery</a>
+        <a id="addLink" href="addToGallery.html" class="button">Add to our Gallery</a>
     </div>
 
 
