--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./stylesheets/styles.css">
-    <title>PicturFolio2</title>
+    <title>PicturFolio</title>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
         <div class="overlay">
             <h1>Welcome To PicturFolio</h1>
             <p>Select the button below</p>
-            <a href="2ndpage.html" class="button">Museum Entrance</a>
+            <a href="galleryMain.html" class="button">Museum Entrance</a>
         </div>
     </div>
 </body>
