created blank single Art page that needs to be linked per photo clicked

--- a/public/singleArt.html
+++ b/public/singleArt.html
@@ -11,8 +11,14 @@
 
 <body>
     <a id="back" href="galleryMain.html">Back</a>
-    <div class='coming_soon'>
-        Feature coming soon.
+
+    <div class="box-container1">
+        <div class="box-item">
+            <img src="IMAGE LINK GOES HERE" alt="">
+        </div>
+    </div>
+    <div class="comments">
+        COMMENTS GO HERE
     </div>
 </body>
 
