update to connections and html

--- a/public/galleryMain.html
+++ b/public/galleryMain.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <a id="logo" href="index.html">Picturfolio</a>
+    <a id="logo" class="btn" href="index.html">Picturfolio</a>
     <div class="container">
         <div class="box">
             <a class="subGallery" href="natureGallery.html">Nature</a>
