--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,15 @@
     <title>PicturFolio</title>
 </head>
 
-<body>
+<body class="lead-image">
+
+    <header>
+        <a href="login.html" class="btn">Login</a>
+    </header>
     
     <div class="lead-image">
         <div class="overlay">
             <h1>Welcome To PicturFolio</h1>
-            <p>Select the button below</p>
             <a href="galleryMain.html" class="button">Museum Entrance</a>
         </div>
     </div>
